--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "url": "https://github.com/quarva/netlify-plugin-sitrep/issues"
   },
   "homepage": "https://github.com/quarva/netlify-plugin-sitrep#readme",
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  },
+  "devDependencies": {},
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "node-fetch": "^2.6.1"
   }
