--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,10 @@
 name: 'netlify-plugin-sitrep'
 inputs:
   - name: allow_prod
-    description: If true, debug data will be injected in the production context.
-    required: true
-    default: false
+    description: If 'true', the plugin will inject data even when run in a production context.
+    required: false
+    default: ''
+  - name: verbose
+    description: If 'true', the plugin will write each step to the deploy log.
+    required: false
+    default: ''
