--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "devDependencies": {
     "@netlify/build": "^3.3.5"
   },
+  "engines": {
+    "node": ">=10.22.0"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
