--- a/demo/netlify.toml
+++ b/demo/netlify.toml
@@ -1,5 +1,17 @@
+# Netlify doesn't support context-dependent plugins yet, so for now
+# we manually switch between local and npm versions during dev deploys
+
+# Development
+[context.branch-deploy]
 [[plugins]]
-package = "@quarva/netlify-plugin-sitrep"
+package = "../"
   [plugins.inputs]  
-    "allow_prod" = "true"
-    # If true, the plugin will work in production.
+    "allow_prod" = ""
+    "verbose" = "true"
+
+# Production
+# [context.production]
+# [[plugins]]
+# package = "@quarva/netlify-plugin-sitrep"
+#   [plugins.inputs]  
+#     "allow_prod" = "true"
