--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,6 @@
   "author": "Quarva <hello@quarva.com> (https://www.quarva.com/",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@quarva/netlify-plugin-sitrep": "0.0.5"
+    "@11ty/eleventy": "^0.11.0"
   }
 }
