--- a/demo/package.json
+++ b/demo/package.json
@@ -9,6 +9,7 @@
   "author": "Quarva <hello@quarva.com> (https://www.quarva.com/",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0"
+    "@11ty/eleventy": "^0.11.0",
+    "@quarva/netlify-plugin-sitrep": "0.0.6-0"
   }
 }
