--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/quarva/netlify-plugin-sitrep#readme",
   "devDependencies": {
-    "@netlify/build": "^3.3.5"
+    "@netlify/build": "^3.3.5",
+    "eslint": "^7.8.1"
   },
   "engines": {
     "node": ">=10.22.0"
