--- a/demo/netlify.toml
+++ b/demo/netlify.toml
@@ -1,10 +1,13 @@
 # Netlify doesn't support context-dependent plugins yet, so for now
 # we manually switch plugin configs during dev deploys
 
+[[plugins]]
+package = "@netlify/plugin-local-install-core"
+
 # Development
 # [context.branch-deploy]
 # [[plugins]]
-# package = "@quarva/netlify-plugin-sitrep"
+# package = "../"
 #   [plugins.inputs]  
 #     "allow_prod" = ""
 #     "verbose" = "true"
@@ -12,7 +15,7 @@
 # Production
 [context.production]
 [[plugins]]
-package = "@quarva/netlify-plugin-sitrep"
+package = "../"
   [plugins.inputs]  
     "allow_prod" = "true"
     "verbose" = ""
