--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "files": [
+    "templates/template.ejs",
+    "index.js",
+    "manifest.yml"
+  ]
 }
